--- a/src/main/resources/templates/pages/admin.html
+++ b/src/main/resources/templates/pages/admin.html
@@ -24,8 +24,9 @@
             crossorigin="anonymous"></script>
 
 
-    <script type="text/javascript" src="../../static/all.js" th:src="@{/all.js}"></script>
+    <script type="text/javascript" src="../../static/showAll.js" th:src="@{/showAll.js}"></script>
     <script type="text/javascript" src="../../static/new.js" th:src="@{/new.js}"></script>
+    <script type="text/javascript" src="../../static/editDelete.js" th:src="@{editDelete.js}"></script>
 
 </head>
 
@@ -86,10 +87,12 @@
 
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#userstable" role="tab">Users table</a>
+                            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#userstable" role="tab">Users
+                                table</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#newuser" role="tab">New user</a>
+                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#newuser" role="tab">New
+                                user</a>
                         </li>
                     </ul>
 
@@ -118,89 +121,174 @@
                             </div>
                         </div>
 
+                        <!--EDIT MODEL-->
+                        <div class="modal fade" id="editModal" tabindex="-1">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title">Edit user</h5>
+                                        <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <form id="formedit">
+                                        <div class="modal-body text-sm-center w-50 mx-auto">
+                                            <div class="form-group">
+                                                <label for="idEdit"
+                                                       class="col-form-label font-weight-bold pb-0">ID</label>
+                                                <input type="text" class="form-control" id="idEdit" readonly/>
+
+                                                <label for="usernameEdit"
+                                                       class="col-form-label font-weight-bold pb-0 pt-3">Name</label>
+                                                <input type="text" class="form-control" id="usernameEdit"/>
+
+                                                <label for="ageEdit" class="col-form-label font-weight-bold pb-0 pt-3">Age</label>
+                                                <input type="number" class="form-control" id="ageEdit"/>
+
+                                                <label for="emailEdit"
+                                                       class="col-form-label font-weight-bold pb-0 pt-3">Email</label>
+                                                <input type="text" class="form-control" id="emailEdit"/>
+
+                                                <label for="passwordEdit"
+                                                       class="col-form-label font-weight-bold pb-0 pt-3">Password</label>
+                                                <input type="text" class="form-control" id="passwordEdit"/>
+
+                                                <label for="rolesEdit"
+                                                       class="col-form-label font-weight-bold pb-0 pt-3">Role</label>
+                                                <select class="form-control" id="rolesEdit" size="2" multiple required>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                                                    aria-label="Close">Close
+                                            </button>
+                                            <button type="submit" class="btn btn-primary">Edit</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--DELETE MODEL-->
+                        <div class="modal fade" id="deleteModal" tabindex="-1">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title">Delete user</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <form id="formdelete">
+                                        <div class="modal-body text-sm-center w-50 mx-auto">
+                                            <div class="form-group">
+                                                <label for="idDelete"
+                                                       class="col-form-label font-weight-bold pb-0">ID</label>
+                                                <input type="text" class="form-control" id="idDelete" readonly/>
+
+                                                <label for="usernameDelete"
+                                                       class="col-form-label font-weight-bold pb-0 pt-3">Name</label>
+                                                <input type="text" class="form-control" id="usernameDelete" readonly/>
+
+                                                <label for="ageDelete"
+                                                       class="col-form-label font-weight-bold pb-0 pt-3">Age</label>
+                                                <input type="text" class="form-control" id="ageDelete" readonly/>
+
+                                                <label for="email" class="col-form-label font-weight-bold pb-0 pt-3">Email</label>
+                                                <input type="text" class="form-control" id="emailDelete" readonly/>
+
+                                                <label for="rolesDelete"
+                                                       class="col-form-label font-weight-bold pb-0 pt-3">Role</label>
+                                                <select class="form-control" id="rolesDelete" size="2" multiple
+                                                        disabled>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                                                    aria-label="Close">Close
+                                            </button>
+                                            <button type="submit" class="btn btn-danger">Delete</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+
                         <!--NEW USER-->
                         <div class="tab-pane fade show" id="newuser" role="tabpanel">
                             <div class="table-responsive border">
                                 <h4 class="mt-3 mx-0 mb-0 border-bottom pl-4 pb-3">Add new user</h4>
                                 <div class="container-fluid bg-white px-4 pt-4 pb-5">
                                     <div class="modal-body text-sm-center w-25 mx-auto pt-0">
-                                        <form id="formnew" method="POST">
+                                        <form id="formnew">
                                             <div class="form-group">
 
-                                                <label for="username" class="col-form-label font-weight-bold p-0">Name</label>
+                                                <label for="username"
+                                                       class="col-form-label font-weight-bold p-0">Name</label>
                                                 <input type="text" class="form-control" id="username"/>
 
                                                 <label for="age"
                                                        class="col-form-label font-weight-bold pb-0 pt-3">Age</label>
                                                 <input type="number" class="form-control" id="age"/>
 
-                                                <label for="email" class="col-form-label font-weight-bold pb-0 pt-3">Email</label>
+                                                <label for="email"
+                                                       class="col-form-label font-weight-bold pb-0 pt-3">Email</label>
                                                 <input type="text" class="form-control" id="email"/>
 
-                                                <label for="password" class="col-form-label font-weight-bold pb-0 pt-3">Password</label>
+                                                <label for="password"
+                                                       class="col-form-label font-weight-bold pb-0 pt-3">Password</label>
                                                 <input type="password" class="form-control" id="password"/>
 
-                                                <label for="roles" class="col-form-label font-weight-bold pb-0 pt-3">Role</label>
+                                                <label for="roles"
+                                                       class="col-form-label font-weight-bold pb-0 pt-3">Role</label>
                                                 <select class="form-control" id="roles" size="2" multiple required>
                                                     <option id="roleAdmin" value="1">ADMIN</option>
                                                     <option id="roleUser" value="2">USER</option>
                                                 </select>
                                                 <br>
-                                                <button type="submit" id="btnNew" class="btn btn-success btn-lg">Add new user</button>
+                                                <button type="submit" id="btnNew" class="btn btn-success btn-lg">Add new
+                                                    user
+                                                </button>
                                             </div>
                                         </form>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
 
 
-                        <div class="tab-pane fade" id="userinform" role="tabpanel" aria-labelledby="v-pills-user-tab">
+                <div class="tab-pane fade" id="userinform" role="tabpanel" aria-labelledby="v-pills-user-tab">
 
-                            <!--USERS INFORMATION-->
-                            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-1">
-                                <h1 class="h1">User information-page</h1>
-                            </div>
+                    <!--USERS INFORMATION-->
+                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-1">
+                        <h1 class="h1">User information-page</h1>
+                    </div>
 
-                            <div class="tab-content" id="myTabContentforuser">
-                                <div class="tab-pane fade show active" id="tableinform" role="tabpanel"
-                                     aria-labelledby="home-tab">
-                                    <div class="table-responsive border">
-                                        <h4 class="mt-3 mx-0 mb-0 border-bottom pl-4 pb-3">About user</h4>
-                                        <div class="container-fluid bg-white px-4 pt-4 pb-5">
-                                            <table class="table table-striped table-sm bg-white m-0"
-                                                   style="LINE-HEIGHT:40px">
-                                                <thead>
-                                                <tr>
-                                                    <th>ID</th>
-                                                    <th>Name</th>
-                                                    <th>Age</th>
-                                                    <th>Email</th>
-                                                    <th>Role</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr>
-                                                    <td>
-                                                        <a th:text="${user.getId()}">ID</a>
-                                                    </td>
-                                                    <td>
-                                                        <a th:text="${user.getUsername()}">Name</a>
-                                                    </td>
-                                                    <td>
-                                                        <a th:text="${user.getAge()}">Age</a>
-                                                    </td>
-                                                    <td>
-                                                        <a th:text="${user.getEmail()}">Email</a>
-                                                    </td>
-                                                    <td>
-                                                        <a th:text="${user.getStringRoles()}">Role</a>
-                                                    </td>
-                                                </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
+                    <div class="tab-content" id="myTabContentforuser">
+                        <div class="tab-pane fade show active" id="tableinform" role="tabpanel"
+                             aria-labelledby="home-tab">
+                            <div class="table-responsive border">
+                                <h4 class="mt-3 mx-0 mb-0 border-bottom pl-4 pb-3">About user</h4>
+                                <div class="container-fluid bg-white px-4 pt-4 pb-5">
+                                    <table class="table table-striped table-sm bg-white m-0"
+                                           style="LINE-HEIGHT:40px">
+                                        <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Name</th>
+                                            <th>Age</th>
+                                            <th>Email</th>
+                                            <th>Role</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="dataUser"></tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
@@ -210,6 +298,7 @@
         </main>
     </div>
 </div>
+
 
 </body>
 </html>
